--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,13 @@ edition = "2021"
 [dependencies]
 log = { version = "0.4.21"}
 env_logger = { version = "0.11.3" }
-wgpu = "^0.19.1"
+wgpu = "^0.20.0"
 winit = { version = "^0.29.4", default-features = false, features = ["rwh_06"] }
 glam = "0.28.0"
 pollster = "0.3.0"
-image = { version = "0.25.1", default-features = false, features = ["png", "jpeg"]}
+image = { version = "0.24.8", default-features = false, features = ["png", "jpeg", "hdr"]}
 # egui
-egui = { version = "0.27.2"}
-egui-wgpu = { version = "0.27.2",features = ["winit"] }
-egui-winit = { version = "0.27.2"}
+egui = { version = "0.28.1"}
+egui-wgpu = { version = "0.28.1",features = ["winit"] }
+egui-winit = { version = "0.28.1"}
 bytemuck = { version = "1.16.1", features = ["derive"] }
