--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,17 +4,17 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-log = { version = "0.4.21"}
-env_logger = { version = "0.11.3" }
-wgpu = "^0.20.0"
-winit = { version = "^0.29.4", default-features = false, features = ["rwh_06"] }
-glam = "0.28.0"
-pollster = "0.3.0"
-image = { version = "0.24.8", default-features = false, features = ["png", "jpeg", "hdr"]}
+log = { version = "0.4.25"}
+env_logger = { version = "0.11.6" }
+wgpu = "^23.0.0"
+winit = { version = "^0.30.0", default-features = false, features = ["rwh_06"] }
+glam = "0.29.2"
+pollster = "0.4.0"
+image = { version = "0.25.5", default-features = false, features = ["png", "jpeg", "hdr"]}
 # egui
-egui = { version = "0.28.1"}
-egui-wgpu = { version = "0.28.1",features = ["winit"] }
-egui-winit = { version = "0.28.1"}
+egui = { version = "0.30.0", default-features = false, features = ["default_fonts"] }
+egui-wgpu = { version = "0.30.0",features = ["winit"] }
+egui-winit = { version = "0.30.0"}
 bytemuck = { version = "1.16.1", features = ["derive"] }
 
 [profile.release]
