--- a/editor/Cargo.toml
+++ b/editor/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
-name = "editor"
-version = "0.1.0"
+name = "imagic-editor"
+version = "0.0.1"
 edition = "2024"
+publish = false
 
 [dependencies]
